--- a/.github/recent-activity.config.yml
+++ b/.github/recent-activity.config.yml
@@ -2,23 +2,23 @@ settings:
   username: "chimpdev"
   commit_msg: "Update recent activity"
   max_lines: 5
-  readme_file: "./TEMPLATE.md"
+  readme_file: "./README.md"
   commit_name: "readme-bot"
   commit_email: "41898282+github-actions[bot]@users.noreply.github.com"
   line_prefix: "{NUM}. "
 messages:
-  added_member: "I became collaborator on {REPO}"
-  changes_approved: "I approved changes in {ID} on {REPO}"
-  changes_requested: "I requested {AMOUNT} change(s) in {ID} on {REPO}"
-  comments: "I commented on {ID} in {REPO}"
-  create_repo: "I created {REPO}"
-  fork_repo: "I forked {FORK} from {REPO}"
-  issue_opened: "I opened issue {ID} in {REPO}"
-  issue_closed: "I closed issue {ID} in {REPO}"
-  new_release: "I released {ID} in {REPO}"
-  new_star: "I starred {REPO}"
-  pr_opened: "I opened pull request {ID} in {REPO}"
-  pr_closed: "I closed pull request {ID} in {REPO}"
-  pr_merged: "I merged pull request {ID} in {REPO}"
-  push: "I pushed {AMOUNT} commit(s) to {REPO}"
-  wiki_create: "I created new wiki page {WIKI} in {REPO}"
+  added_member: "Became collaborator on {REPO}"
+  changes_approved: "Approved changes in {ID} on {REPO}"
+  changes_requested: "Requested {AMOUNT} change(s) in {ID} on {REPO}"
+  comments: "Commented on {ID} in {REPO}"
+  Create_repo: "Created {REPO}"
+  Fork_repo: "Forked {FORK} from {REPO}"
+  Issue_opened: "Opened issue {ID} in {REPO}"
+  Issue_closed: "Closed issue {ID} in {REPO}"
+  New_release: "Released {ID} in {REPO}"
+  New_star: "Starred {REPO}"
+  Pr_opened: "Opened pull request {ID} in {REPO}"
+  Pr_closed: "Closed pull request {ID} in {REPO}"
+  Pr_merged: "Merged pull request {ID} in {REPO}"
+  Push: "Pushed {AMOUNT} commit(s) to {REPO}"
+  Wiki_create: "Created new wikpage {WIKI} in {REPO}"
