--- a/.github/recent-activity.config.yml
+++ b/.github/recent-activity.config.yml
@@ -11,14 +11,14 @@ messages:
   changes_approved: "Approved changes in {ID} on {REPO}"
   changes_requested: "Requested {AMOUNT} change(s) in {ID} on {REPO}"
   comments: "Commented on {ID} in {REPO}"
-  Create_repo: "Created {REPO}"
-  Fork_repo: "Forked {FORK} from {REPO}"
-  Issue_opened: "Opened issue {ID} in {REPO}"
-  Issue_closed: "Closed issue {ID} in {REPO}"
-  New_release: "Released {ID} in {REPO}"
-  New_star: "Starred {REPO}"
-  Pr_opened: "Opened pull request {ID} in {REPO}"
-  Pr_closed: "Closed pull request {ID} in {REPO}"
-  Pr_merged: "Merged pull request {ID} in {REPO}"
-  Push: "Pushed {AMOUNT} commit(s) to {REPO}"
-  Wiki_create: "Created new wikpage {WIKI} in {REPO}"
+  create_repo: "Created {REPO}"
+  fork_repo: "Forked {FORK} from {REPO}"
+  issue_opened: "Opened issue {ID} in {REPO}"
+  issue_closed: "Closed issue {ID} in {REPO}"
+  new_release: "Released {ID} in {REPO}"
+  new_star: "Starred {REPO}"
+  pr_opened: "Opened pull request {ID} in {REPO}"
+  pr_closed: "Closed pull request {ID} in {REPO}"
+  pr_merged: "Merged pull request {ID} in {REPO}"
+  push: "Pushed {AMOUNT} commit(s) to {REPO}"
+  wiki_create: "Created new wikpage {WIKI} in {REPO}"
